# mongot

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  ARTICLE_EXAMPLE_1_TEXT_SEARCH.md  BUILD  INTELLIJ-QUICKSTART.md  LOCAL-RUN.md  MONGOT_PACKAGE_TOUR.md  MONGOT_TIMELINE.md  Makefile  README.md  WORKSPACE  local-grafana-datasource.yml  local-grafana-mongot-dashboard.json  local-grafana-tempo-dashboard.json  local-grafana-tempo.sh  local-jaeger.sh  local-mongod.sh  local-monitoring.sh  local-prometheus.sh  local-prometheus.yml  run-local.sh
.github/workflows/: publish-mongot-app-tour.yml
bazel/: BUILD  bazel_deps.bzl  deps.bzl  early_init.bzl  init_bazel_deps.bzl  init_deps.bzl  repos.bzl
bazel/buildifier/: deps.bzl  repos.bzl
bazel/common/: bazel_deps.bzl  repos.bzl  workspace_status.sh
bazel/config/: BUILD  def.bzl
bazel/docker/: BUILD  bazel_deps.bzl  deps.bzl  init_bazel_deps.bzl  repos.bzl
bazel/go/: BUILD  bazel_deps.bzl  repos.bzl
bazel/java/: BUILD  bazel_deps.bzl  dep_utils.bzl  deps.bzl  early_init.bzl  init_bazel_deps.bzl  init_deps.bzl  jdk_linux.BUILD  jdk_macos.BUILD  lucene_fork_pin_info.json  maven_pin_info.json  netty_tcnative.bzl  package.bzl  proto_bson.bzl  repos.bzl  search_query_deps.bzl  systems_deps.bzl  test.bzl
bazel/javascript/: bazel_deps.bzl  deps.bzl  init_bazel_deps.bzl  init_deps.bzl  repos.bzl
bazel/promtool/: defs.bzl
bazel/proto/: BUILD  bazel_deps.bzl  repos.bzl
bazel/python/: BUILD  bazel_deps.bzl  deps.bzl  init_bazel_deps.bzl  repos.bzl  requirements.in  requirements_lock.txt
bazel/releases/: deps.bzl  mongot_release_query_integ_tests.BUILD
bazel/rust/: bazel_deps.bzl  config.bzl  deps.bzl  init_deps.bzl  repos.bzl
bazel/shell/: BUILD  bazel_deps.bzl  repos.bzl
bazel/tools/: BUILD  repos.bzl
community-quick-start/: README.md  docker-compose.yml  init-mongo.sh  mongod.conf
conf/checkstyle/: BUILD  README.md  (+2 more)
deploy/: BUILD  def.bzl
docs/: building.md  search-vector-tracing.md
load-results/: k6.txt
mongot-app-tour/: index.html  story-animation.json
mongot-tour-app/: index.html  story-animation.json
scripts/: address_generator.js  mongosh.js  profile.sh  runfiles_helper.sh  threaddump.sh  vars.sh
src/main/java/com/xgen/mongot/monitor/: BUILD.bazel  DiskMonitor.java  Gate.java  HysteresisGate.java  NoOpDiskMonitor.java  PeriodicDiskMonitor.java  ReplicationStateMonitor.java  ToggleGate.java
src/main/java/com/xgen/testing/mongot/replication/mongodb/common/: BUILD.bazel  MongoDbReplicationConfigBuilder.java
src/test/unit/java/com/xgen/mongot/embedding/: AutoEmbeddingMemoryBudgetTest.java  BUILD.bazel  EmbeddingRequestContextTest.java
src/test/unit/java/com/xgen/mongot/embedding/config/: MaterializedViewCollectionMetadataCatalogTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/: BUILD.bazel  MaterializedViewCollectionResolverTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/common/: BUILD  InternalDatabaseResolverTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/leasing/: BUILD.bazel  DynamicLeaderLeaseManagerTest.java  LeaseManagerOpsCommandsTest.java  LeaseTest.java  StaticLeaderLeaseManagerTest.java  StatusResolutionUtilsTest.java
src/test/unit/java/com/xgen/mongot/embedding/providers/: BUILD  EmbeddingServiceManagerTest.java
src/test/unit/java/com/xgen/mongot/embedding/providers/clients/: BUILD  VoyageClientTest.java
src/test/unit/java/com/xgen/mongot/embedding/providers/config/: BUILD  EmbeddingModelConfigTest.java  EmbeddingServiceConfigTest.java  VoyageApiSchemaTest.java
src/test/unit/java/com/xgen/mongot/embedding/utils/: AutoEmbeddingDocumentUtilsTest.java  AutoEmbeddingIndexDefinitionUtilsTest.java  BUILD.bazel  MongoClientOperationExecutorTest.java
tools/: bazel
(+3444 files in other folders)
