load("//bazel/java:package.bzl", "java_library")

java_library(
    name = "common",
    testonly = True,
    srcs = [
        "MongoDbReplicationConfigBuilder.java",
    ],
    visibility = ["//visibility:public"],
    exports = ["//src/main/java/com/xgen/mongot/replication/mongodb/common"],
    deps = [
        "//src/main/java/com/xgen/mongot/replication/mongodb/common",
        "//src/main/java/com/xgen/mongot/util",
        "@maven//:org_mongodb_bson",
    ],
)
