load("//bazel/java:test.bzl", "java_test_suite")

java_test_suite(
    name = "leasing",
    srcs = ["StatusResolutionUtilsTest.java"],
    tags = ["unit"],
    deps = [
        "//src/main/java/com/xgen/mongot/embedding/mongodb/leasing",
        "//src/main/java/com/xgen/mongot/index/status",
        "@maven//:junit_junit",
    ],
)
